infra/cloudformation/templates/security.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create Assignment 01 security groups on top of an existing VPC.

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Existing VPC ID created by the network layer.
  AllowedSshCidr:
    Type: String
    Description: Admin CIDR allowed to SSH into the public EC2 instance.
  ProjectName:
    Type: String
    Default: nt548
    Description: Project tag applied to all resources.
  EnvironmentName:
    Type: String
    Default: dev
    Description: Environment tag applied to all resources.

Resources:
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH from the admin CIDR to the public EC2 instance.
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AllowedSshCidr
          Description: Allow SSH from the admin CIDR.
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic.
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-${EnvironmentName}-public-ec2-sg'
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: ManagedBy
          Value: cloudformation

  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH from the public EC2 security group to the private EC2 instance.
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref PublicSecurityGroup
          Description: Allow SSH from the public EC2 security group.
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic.
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-${EnvironmentName}-private-ec2-sg'
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: ManagedBy
          Value: cloudformation

Outputs:
  PublicSecurityGroupId:
    Description: Security group ID for the public EC2 instance.
    Value: !Ref PublicSecurityGroup
  PrivateSecurityGroupId:
    Description: Security group ID for the private EC2 instance.
    Value: !Ref PrivateSecurityGroup
